write in readme some info about SecurityManager